fix up complete examples

--- a/labs/complete/fortune-teller/fortune-teller-fortune-service/src/main/resources/application.yml
+++ b/labs/complete/fortune-teller/fortune-teller-fortune-service/src/main/resources/application.yml
@@ -21,9 +21,13 @@ spring:
   jpa:
     database: HSQL
 
+security:
+  basic:
+    enabled: false
+
 ---
 
 spring:
   profiles: cloud
   jpa:
-    database: MYSQL
+    database: HSQL
