--- a/labs/complete/fortune-teller/fortune-teller-ui/src/main/resources/bootstrap.yml
+++ b/labs/complete/fortune-teller/fortune-teller-ui/src/main/resources/bootstrap.yml
@@ -4,3 +4,8 @@ spring:
   cloud:
     config:
       uri: ${vcap.services.config-service.credentials.uri:http://localhost:8888}
+
+eureka:
+  client:
+    service-url:
+        defaultZone: ${vcap.services.eureka-service.credentials.uri:http://localhost:8761}/eureka/
